--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <h1 class="text-uppercase">I am Sigit Mardiansyah</h1>
                 <h5 class="text-uppercase">Web Developer and Mobile Developer</h5>
                 <div class="d-flex align-items-center">
-                  <a class="primary_btn" href="CV.pdf" download><span>Get CV</span></a>
+                  <a class="primary_btn tr-bg" href="CV.pdf" download><span>Get CV</span></a>
                 </div>
               </div>
             </div>
