--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
               Saya adalah pribadi yang bertanggung jawab serta memiliki keinginan untuk berkembang, senang untuk belajar hal baru,
               cepat untuk memahami suatu hal, cepat beradaptasi dengan lingkungan, menganalisis suatu masalah dan bisa berkerja sebagai tim dan individu.
               </p>
-              <a class="primary_btn" href="#"><span>Download CV</span></a>
+              <a class="primary_btn" href="CV.pdf"><span>Download CV</span></a>
             </div>
           </div>
         </div>
