--- a/index.html
+++ b/index.html
@@ -710,6 +710,69 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-4 col-md-6 all latest">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/apw.PNG"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/apw.PNG" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="portfolio-details.html">Aplikasi Pendataan Warga</a></h4>
+                  <p>Web, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all latest">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/aplikasi_peramalan.PNG"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/aplikasi_peramalan.PNG" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="portfolio-details.html">Aplikasi Peramalan Penjualan Produk CV. Selaras</a></h4>
+                  <p>Web, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all latest">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/smansi.PNG"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/smansi.PNG" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="portfolio-details.html">Aplikasi Smart Presensi</a></h4>
+                  <p>Web, Portfolio</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
