--- a/index.html
+++ b/index.html
@@ -329,72 +329,72 @@
     
     <!--================ Start Header Area =================-->
     <header class="header_area">
-		<div class="preloader">
-			<div class="loading">
-				<div class="loader">
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-				  </div>
-			</div>
-		  </div>
-      <div class="main_menu">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand logo_h" href="#home"
-              ><img src="img/resume.png" alt="" width="50px"
-            /> &nbsp; MAR<sup>SIG</sup></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div
-              class="collapse navbar-collapse offset"
-              id="navbarSupportedContent"
-            >
-              <ul class="nav navbar-nav menu_nav justify-content-end">
-                <li class="nav-item">
-                  <a class="nav-link" href="#home">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#brand">Working Experience</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#skill">Skill</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#portfolio">Portfolio</a>
-                </li>
-              </ul>
+      <div class="preloader">
+        <div class="loading">
+          <div class="loader">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
             </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!--================ End Header Area =================-->
+        </div>
+        </div>
+        <div class="main_menu">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <a class="navbar-brand logo_h" href="index.html"
+              ><img src="img/resume.png" alt="" width="50px"
+              /> &nbsp; MAR<sup>SIG</sup></a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div
+                class="collapse navbar-collapse offset"
+                id="navbarSupportedContent"
+              >
+                <ul class="nav navbar-nav menu_nav justify-content-end">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#brand">Working Experience</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#skill">Skill</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </header>
+      <!--================ End Header Area =================-->
 
     <!--================ Start Home Banner Area =================-->
     <section class="home_banner_area" id="home">
@@ -621,7 +621,7 @@
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">Aplikasi PUSPES</a></h4>
+                  <h4><a href="pus.html">Aplikasi PUSPES</a></h4>
                   <p>Web, Portofolio</p>
                 </div>
               </div>
@@ -642,7 +642,7 @@
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">App Pemesanan Makanan (PEMAK)</a></h4>
+                  <h4><a href="resah.html">App Pemesanan Makanan (PEMAK)</a></h4>
                   <p>Android Mobile, Portfolio</p>
                 </div>
               </div>
@@ -663,7 +663,7 @@
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">Aplikasi Pemilihan Ketua RT / RW</a></h4>
+                  <h4><a href="apk.html">Aplikasi Pemilihan Ketua RT / RW</a></h4>
                   <p>Web, Portfolio</p>
                 </div>
               </div>
@@ -684,7 +684,7 @@
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">Aplikasi Donatur Kayu Limbah (Kayunich)</a></h4>
+                  <h4><a href="kayunich.html">Aplikasi Donatur Kayu Limbah (Kayunich)</a></h4>
                   <p>Web, Portfolio</p>
                 </div>
               </div>
@@ -705,7 +705,7 @@
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">Aplikasi PKPU PT. Aerofood Indonesia</a></h4>
+                  <h4><a href="pkpu.html">Aplikasi PKPU PT. Aerofood Indonesia</a></h4>
                   <p>Web, Portfolio</p>
                 </div>
               </div>
@@ -726,7 +726,7 @@
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">Aplikasi Pendataan Warga</a></h4>
+                  <h4><a href="apw.html">Aplikasi Pendataan Warga</a></h4>
                   <p>Web, Portfolio</p>
                 </div>
               </div>
@@ -747,7 +747,7 @@
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">Aplikasi Peramalan Penjualan Produk CV. Selaras</a></h4>
+                  <h4><a href="cv_selaras.html">Aplikasi Peramalan Penjualan Produk CV. Selaras</a></h4>
                   <p>Web, Portfolio</p>
                 </div>
               </div>
@@ -768,7 +768,91 @@
                   </a>
                 </div>
                 <div class="short_info">
-                  <h4><a href="portfolio-details.html">Aplikasi Smart Presensi</a></h4>
+                  <h4><a href="smart_presensi.html">Aplikasi Smart Presensi</a></h4>
+                  <p>Web, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all popular">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/smansi_app.jpeg"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/smansi_app.jpeg" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="smansi.html">App SMANSI (Smart Presensi)</a></h4>
+                  <p>Android Mobile, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all popular">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/beline.jpeg"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/beline.jpeg" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="beline.html">App Belajar Online (BELINE)</a></h4>
+                  <p>Android Mobile, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all popular">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/bni.PNG"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/bni.PNG" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="bni.html">App BNI Brevet</a></h4>
+                  <p>Android Mobile, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all latest">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/sis.PNG"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/sis.PNG" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="sis.html">Aplikasi Sistem Informasi Sinde</a></h4>
                   <p>Web, Portfolio</p>
                 </div>
               </div>
