--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@
             <li class="active" data-filter="*">all</li>
             <li data-filter=".popular">Mobile</li>
             <li data-filter=".latest">Web</li>
+            <li data-filter=".old">Desktop</li>
           </ul>
         </div>
 
@@ -854,6 +855,69 @@
                 <div class="short_info">
                   <h4><a href="sis.html">Aplikasi Sistem Informasi Sinde</a></h4>
                   <p>Web, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all old">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/TRANSAKSI.PNG"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/TRANSAKSI.PNG" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="bengkel.html">Aplikasi Service Bengkel Mobil</a></h4>
+                  <p>Desktop, Portofolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all popular">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/dakom.jpg"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/dakom.jpg" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="dakom.html">App DAKOM</a></h4>
+                  <p>Android Mobile, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all popular">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/ppid.jpg"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/ppid.jpg" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="ppid.html">App PPID</a></h4>
+                  <p>Android Mobile, Portfolio</p>
                 </div>
               </div>
             </div>
