kasirku dan dash mitra

--- a/index.html
+++ b/index.html
@@ -921,6 +921,48 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-4 col-md-6 all latest">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/kasirku.png"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/kasirku.png" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="kasirku.html">Aplikasi Kasirku</a></h4>
+                  <p>Web, Portfolio</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 all latest">
+              <div class="portfolio_box">
+                <div class="single_portfolio">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/portfolio/dash_mitra.png"
+                    alt=""
+                  />
+                  <div class="overlay"></div>
+                  <a href="img/portfolio/dash_mitra.png" class="img-gal">
+                    <div class="icon">
+                      <span class="lnr lnr-cross"></span>
+                    </div>
+                  </a>
+                </div>
+                <div class="short_info">
+                  <h4><a href="dash_mitra.html">Aplikasi Dash Mitra</a></h4>
+                  <p>Web, Portfolio</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
