--- a/index.html
+++ b/index.html
@@ -440,14 +440,10 @@
                 myself
               </h2>
               <p>
-              Lulusan S1 Ilmu Komputer Universitas Mercu Buana Jurusan Teknik Informatika. 
-              Memiliki berbagai pengalaman seperti pengalaman magang di PT. Quadran Inovasi Karya Bersama selama 4 bulan sebagai IT Teknisi,
-              pengalaman menjadi Assistan Lab Komputer untuk mata kuliah Pemograman Web, Pemograman Android dan Konfigurasi Jaringan dan Multi Server selama 6 bulan,
-              dan pengalaman berkerja di PT. Sinde Budi Sentosa selama 6 bulan sebagai System Developer. 
+                Programmer web yang percaya diri, optimis, dan disiplin dengan semangat kerja tinggi. Berpengalaman dalam mengembangkan aplikasi berbasis web yang efisien dan user-friendly menggunakan PHP (CodeIgniter 3), Angular/TypeScript, JavaScript, dan C#. Beberapa proyek yang telah saya selesaikan mencakup Aplikasi Web Order, SIS (Sinde Information System), serta berbagai proyek freelance lainnya. 
               </p>
               <p>
-              Saya adalah pribadi yang bertanggung jawab serta memiliki keinginan untuk berkembang, senang untuk belajar hal baru,
-              cepat untuk memahami suatu hal, cepat beradaptasi dengan lingkungan, menganalisis suatu masalah dan bisa berkerja sebagai tim dan individu.
+                Sebagai asisten lab komputer di Universitas Mercu Buana dan mentor di program pengabdian masyarakat, saya telah mengasah keterampilan dalam pengajaran dan pengembangan aplikasi. Dengan minat besar dalam eksplorasi teknologi dan inovasi, saya berkomitmen untuk terus belajar dan memberikan hasil terbaik.
               </p>
               <a class="primary_btn" href="CV.pdf"><span>Download CV</span></a>
             </div>
